# Forta-Data

./: README.md
LibSOFL/crates/knowledge/index/: Cargo.toml
LibSOFL/crates/knowledge/index/src/inspectors/: extract_invocation.rs  extract_mf_and_fc.rs  extract_mf_and_fc_and_op.rs  extract_money_flow.rs  mod.rs
scripts/: Cargo.toml
scripts/src/: attack_transaction.txt  config.toml  main.rs
