[package]
name = "reth_tracer"
version = "0.0.1"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libsofl-core = {path = "/mnt/nvme/mengya/reth-node/LibSOFL/crates/core"}
libsofl-reth = {path = "/mnt/nvme/mengya/reth-node/LibSOFL/crates/reth"}
libsofl-utils = {path = "/mnt/nvme/mengya/reth-node/LibSOFL/crates/utils"}
libsofl-jsonrpc = {path = "/mnt/nvme/mengya/reth-node/LibSOFL/crates/jsonrpc"}
libsofl-knowledge-base = {path = "/mnt/nvme/mengya/reth-node/LibSOFL/crates/knowledge/base"}
libsofl-knowledge-index = {path = "/mnt/nvme/mengya/reth-node/LibSOFL/crates/knowledge/index"}
reth-provider = { git = "https://github.com/paradigmxyz/reth.git", rev = "cd08ba8"}